# Chess-Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  moves.txt
macos/: Info.plist
scripts/: build_linux.sh  build_mac.sh  build_windows.bat  run_elo_match.sh  run_quality_gate.sh  run_regression.sh  run_uci_smoke.sh  svg_to_png.sh
src/: board.hpp  chess_core.hpp  chess_types.hpp  main.cpp  search.hpp  ui.cpp  ui.hpp
